# modern-cpp-template

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile
.github/workflows/: c-cpp.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt
